# fineTuningProject

./: Dockerfile  inference.py  main.py  pyproject.toml  requirements.txt  train.py
.ipynb_checkpoints/: train-checkpoint.py
datasets/: create_csv.py  csv.csv
datasets/.ipynb_checkpoints/: create_csv-checkpoint.py  csv-checkpoint.csv
models/: mymodels.py
